changed file ending of img paris4

--- a/content/aboutParis.html
+++ b/content/aboutParis.html
@@ -46,7 +46,7 @@
         <div class="row_cell_right">
                 <img src="../media/paris2.JPG" alt="Picture of the Arc de Triomphe in Paris"/>
                 <img src="../media/paris3.JPG" alt="Picture of the glass pyramid in front of the Louvre"/>
-                <img src="../media/paris4.jpg" alt="Picture of the Eiffel Tower"/>
+                <img src="../media/paris4.JPG" alt="Picture of the Eiffel Tower"/>
         </div>
         <div class="row_cell_left">
         <h2>A magical adventure</h2>
